--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-.Rproj.user
-.Rhistory
-.RData
+*.Rproj.user
+*.Rhistory
+*.RData
 *-Ex.R
-.Rproj
+*.Rproj
 .DS_Store
 *.rda
 *.err
@@ -10,3 +10,4 @@
 pset3/2cd
 pset3/2e
 pset3/plots
+.Rproj.user
